// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser.getSymbols properties identifiers 1`] = `
Object {
  "identifiers": Array [
    Object {
      "expression": "res",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 14,
        },
        "start": Position {
          "column": 6,
          "line": 14,
        },
      },
      "name": "res",
    },
    Object {
      "expression": "a",
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 14,
        },
        "start": Position {
          "column": 14,
          "line": 14,
        },
      },
      "name": "a",
    },
    Object {
      "expression": "b",
      "location": Object {
        "end": Position {
          "column": 23,
          "line": 14,
        },
        "start": Position {
          "column": 22,
          "line": 14,
        },
      },
      "name": "b",
    },
  ],
  "summary": Array [
    "14 - res",
    "14 - a",
    "14 - b",
  ],
}
`;

exports[`Parser.getSymbols properties properties 1`] = `
Array [
  Object {
    "expression": "[0].a",
    "location": Object {
      "end": Position {
        "column": 15,
        "line": 17,
      },
      "start": Position {
        "column": 14,
        "line": 17,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "[1].b",
    "location": Object {
      "end": Position {
        "column": 23,
        "line": 17,
      },
      "start": Position {
        "column": 22,
        "line": 17,
      },
    },
    "name": "b",
  },
]
`;
